--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "lycosidae",
+  "name": "potatobot",
   "version": "0.0.1",
   "private": true,
   "main": "app.js",
   "scripts": {
     "start": "npm run build:run",
-    "build:run": "npm run build && node lib/bot",
+    "build:start": "npm run build && node lib/bot",
+    "build:test": "npm run build && node lib/test",
     "build": "node ./node_modules/typescript/lib/tsc",
-    "devstart": "nodemon --exec './node_modules/typescript/lib/tsc && node lib/bot'",
-    "test": "npm run buld && node lib/test"
+    "devstart": "nodemon --exec npm run build:start",
+    "devtest": "nodemon --exec npm run build:test"
   },
   "dependencies": {
     "discord.js": "11.1.0",
+    "dotenv": "^4.0.0",
     "kindred-api": "^2.0.76",
     "mongoose": "^4.11.7",
     "types-kindred": "0.0.1",
     "typescript": "^2.4.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.1",
     "@types/node": "^8.0.24",
     "nodemon": "1.11.0"
   }
