--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 			/* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
 		,"module": "commonjs"
 			/* Specify library files to be included in the compilation:  */
-		// "lib": [],
+		,"lib": ["es2015", "es2017"]
 			/* Allow javascript files to be compiled. */
 		// "allowJs": true,
 			/* Report errors in .js files. */
