--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "npm run build:run",
-    "build:start": "npm run build && node lib/bot",
+    "build:start": "npm run build && node lib/index",
     "build:test": "npm run build && node lib/test",
     "build": "node ./node_modules/typescript/lib/tsc",
     "devstart": "nodemon --exec npm run build:start",
