--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "kindred-api": "^2.0.76",
     "mongoose": "^4.11.7",
+    "source-map-support": "^0.5.0",
     "types-kindred": "0.0.1",
     "typescript": "^2.4.2"
   },
