--- a/tsconfig.json
+++ b/tsconfig.json
@@ -84,7 +84,7 @@
 			/* Specify the location where debugger should locate map files instead of generated locations. */
 		// "mapRoot": "./",
 			/* Emit a single file with source maps instead of having a separate file. */
-		// "inlineSourceMap": true,
+		,"inlineSourceMap": true
 			/* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
 		// "inlineSources": true,
 			/* Experimental Options */
