--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "grunt && node lib/",
-    "devstart": "grunt dev"
+    "devstart": "grunt dev",
+    "lint": "gulp lint"
   },
   "dependencies": {
     "discord.js": "11.1.0",
@@ -13,18 +14,20 @@
     "kindred-api": "^2.0.76",
     "mongoose": "^4.11.7",
     "source-map-support": "^0.5.0",
-    "types-kindred": "0.0.1",
-    "typescript": "^2.4.2"
+    "types-kindred": "0.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.1",
     "@types/node": "^8.0.53",
-    "grunt": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-develop": "^0.4.0",
-    "grunt-ts": "^6.0.0-beta.17",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-tslint": "^8.1.2",
+    "gulp-typescript": "^3.2.3",
     "load-grunt-tasks": "^3.5.2",
     "nodemon": "1.11.1",
-    "time-grunt": "^1.4.0"
+    "run-sequence": "^2.2.0",
+    "tslint": "^4.5.1",
+    "typescript": "^2.6.1"
   }
 }
