--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.1",
+    "@types/mongodb": "^3.0.3",
+    "@types/mongoose": "^4.7.33",
     "@types/node": "^9.3.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
