--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,8 @@
 			"type": "node",
 			"request": "attach",
 			"name": "Attach to Process",
-			"port": 5858
+			"port": 9229,
+			"restart": true
 		}
 	]
 }
