Adding source code mapping

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "gulp && node lib/",
     "devstart": "nodemon -w src -e ts --exec ts-node --inspect src/",
+    "map": "gulp && madge lib/index.js lib/commands/*.js --image graph.svg",
     "postinstall": "gulp"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.3",
     "load-grunt-tasks": "^3.5.2",
+    "madge": "^3.0.1",
     "nodemon": "^1.14.11",
     "run-sequence": "^2.2.0",
     "ts-node": "^4.1.0",
